--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Hello Coursera!  </title>
 </head>
 
 <body>
-	<h1>Hello Coursera!</h1>
+	<h1>Hello Coursera! I'm starting learning basics of html! <br> cool!</h1>
 <body>
 <html>
+
+
